// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index page Renders the index page 1`] = `
<WithStyles(ForwardRef(Container))>
  <DetailsMenuProvider>
    <PodList />
  </DetailsMenuProvider>
</WithStyles(ForwardRef(Container))>
`;

exports[`Index page Renders the index page with pod iris 1`] = `
<WithStyles(ForwardRef(Container))>
  <DetailsMenuProvider>
    <PodList
      podIris={
        Array [
          "https://mypod.myhost.com",
        ]
      }
    />
  </DetailsMenuProvider>
</WithStyles(ForwardRef(Container))>
`;
